Its been a bit since I did a commit so cant remember all changes.

--- a/app.html
+++ b/app.html
@@ -204,7 +204,7 @@
                 console.log(err, response);
             });
 
-            muse.api.getAccounts(["username"], function(err, response){
+            muse.api.getAccounts([username], function(err, response){
                 console.log(err, response);
             });
 
